crates/astria-sequencer-relayer-test/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sequencer-relayer-environment-deployment
  labels:
    app: sequencer-relayer-environment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sequencer-relayer-environment
  template:
    metadata:
      labels:
        app: sequencer-relayer-environment
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: celestia-app
          command: ["/scripts/start-celestia-appd.sh"]
          image: "ghcr.io/celestiaorg/celestia-app:v0.13.3"
          volumeMounts:
          - mountPath: /scripts/
            name: celestia-appd-scripts-volume
            readOnly: true
          - mountPath: /home/celestia
            name: celestia-home
        - name: celestia-bridge
          command:
          - /scripts/start-bridge.sh
          # image: "ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7"
          image: "celestia-node:test"
          volumeMounts:
            - mountPath: /scripts/
              name: bridge-scripts-volume
              readOnly: true
            - mountPath: /home/celestia
              name: celestia-home
          ports:
            - containerPort: 26659
              name: bridge-rest-svc
            - containerPort: 26658
              name: bridge-rpc-svc
          startupProbe:
            httpGet:
              path: /header/1
              port: bridge-rest-svc
            failureThreshold: 30
            periodSeconds: 10
        # - name: metro-sequencer
        #   command: ["/scripts/start-metro.sh"]
        #   image: "ghcr.io/astriaorg/metro:0.0.2"
        #   ports:
        #     - containerPort: 1318
        #       name: sequencer-svc
        #   startupProbe:
        #     httpGet:
        #       path: /cosmos/base/tendermint/v1beta1/blocks/latest
        #       port: sequencer-svc
        #     failureThreshold: 30
        #     periodSeconds: 10
        #   volumeMounts:
        #     - mountPath: /scripts/
        #       name: metro-scripts-volume
        #       readOnly: true
        #     - mountPath: /home/metro
        #       name: metro-home
        #   envFrom:
        #     - configMapRef:
        #         name: sequencer-relayer-environment-metro-config
      volumes:
      - name: bridge-scripts-volume
        configMap:
          name: bridge-scripts
          defaultMode: 0500
      - name: metro-scripts-volume
        configMap:
          name: metro-scripts
          defaultMode: 0500
      - name: celestia-appd-scripts-volume
        configMap:
          name: celestia-appd-scripts
          defaultMode: 0500
      - emptyDir: {}
        name: celestia-home
      - emptyDir: {}
        name: metro-home
