crates/astria-sequencer-relayer-test/kubernetes/prepull-daemon-set.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sequencer-relayer-environment-prepull
spec:
  selector:
    matchLabels:
      name: sequencer-relayer-environment-prepull
  template:
    metadata:
      labels:
        name: sequencer-relayer-environment-prepull
    spec:
      containers:
        - name: pause
          image: gcr.io/google_containers/pause
---
