crates/astria-sequencer-relayer-test/kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: sequencer-relayer-environment-service
spec: 
  selector:
    app: sequencer-relayer-environment
  ports:
    # - name: sequencer-svc
    #   port: 1318
    #   targetPort: sequencer-svc
    - name: bridge-rest-svc
      port: 26659
      targetPort: bridge-rest-svc
    - name: bridge-rpc-svc
      port: 26658
      targetPort: bridge-rpc-svc
