crates/astria-sequencer-relayer-test/kubernetes/test-environment.yml
apiVersion: v1
kind: Service
metadata:
  name: sequencer-relayer-environment-service
spec:
  ports:
  - name: cometbft-svc
    port: 26657
    targetPort: cometbft-svc
  - name: sequencer-svc
    port: 26658
    targetPort: sequencer-svc
  - name: bridge-svc
    port: 26659
    targetPort: bridge-svc
  selector:
    app: sequencer-relayer-environment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sequencer-relayer-environment
  name: sequencer-relayer-environment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sequencer-relayer-environment
  template:
    metadata:
      labels:
        app: sequencer-relayer-environment
    spec:
      containers:
      - command:
        - /scripts/start-celestia-appd.sh
        image: ghcr.io/astriaorg/celestia-app:v0.11.0
        name: celestia-app
        volumeMounts:
        - mountPath: /scripts/
          name: celestia-appd-scripts-volume
          readOnly: true
        - mountPath: /home/celestia
          name: celestia-home
      - command:
        - /scripts/start-bridge.sh
        image: ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7
        name: celestia-bridge
        ports:
        - containerPort: 26659
          name: bridge-svc
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /header/1
            port: bridge-svc
          periodSeconds: 10
        volumeMounts:
        - mountPath: /scripts/
          name: bridge-scripts-volume
          readOnly: true
        - mountPath: /home/celestia
          name: celestia-home
      - command:
        - /usr/local/bin/astria-sequencer
        image: docker.io/library/debian:bookworm-slim
        name: astria-sequencer
        ports:
        - containerPort: 26658
          name: sequencer-svc
        volumeMounts:
        - mountPath: /usr/local/bin/astria-sequencer
          name: astria-sequencer-binary
          readOnly: true
      - command:
        - /home/cometbft/cometbft start
        image: ghcr.io/noot99/cometbft:latest
        name: cometbft
        ports:
        - containerPort: 26657
          name: cometbft-svc
      volumes:
      - hostPath:
          path: /tmp/astria/astria-sequencer
          type: File
        name: astria-sequencer-binary
      - configMap:
          defaultMode: 320
          name: bridge-scripts-tctfb6gktd
        name: bridge-scripts-volume
      - configMap:
          defaultMode: 320
          name: celestia-appd-scripts-mgmh8g995k
        name: celestia-appd-scripts-volume
      - emptyDir: {}
        name: celestia-home
