crates/astria-sequencer-relayer-test/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sequencer-relayer-environment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules: 
  - host: test.localdev.me
    http:
      paths:
        - pathType: Prefix
          path: "/sequencer/(.*)"
          backend:
            service:
              name: sequencer-relayer-environment-service
              port:
                number: 1318
        - pathType: Prefix
          path: "/bridge/(.*)"
          backend:
            service:
              name: sequencer-relayer-environment-service
              port:
                number: 26659
        - pathType: Prefix
          path: "/bridgerpc/(.*)"
          backend:
            service:
              name: sequencer-relayer-environment-service
              port:
                number: 26658
---
